Feature: Bumper java til 15 og erstatter DTO med records.